// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`max tokens > [anthropic] returns MAX_TOKENS finish reason for call 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "# U.S. States

1. Alabama
2. Alaska
3. Arizona
4. Arkansas
5. California
6. Colorado
7. Connecticut
8. Delaware
9. Florida
10. Georgia
11. Hawaii",
            "type": "text",
          },
        ],
        "modelId": "anthropic/claude-haiku-4-5",
        "name": null,
        "providerId": "anthropic",
        "providerModelName": "claude-haiku-4-5",
        "rawMessage": {
          "content": [
            {
              "text": "# U.S. States

1. Alabama
2. Alaska
3. Arizona
4. Arkansas
5. California
6. Colorado
7. Connecticut
8. Delaware
9. Florida
10. Georgia
11. Hawaii",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        "role": "assistant",
      },
    ],
    "modelId": "anthropic/claude-haiku-4-5",
    "providerId": "anthropic",
    "providerModelName": "claude-haiku-4-5",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 15,
      "outputTokens": 50,
      "raw": "[object Object]",
      "reasoningTokens": 0,
      "totalTokens": 65,
    },
  },
}
`;

exports[`max tokens > [anthropic] returns MAX_TOKENS finish reason for stream 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "# U.S. States (50 total)

1. Alabama
2. Alaska
3. Arizona
4. Arkansas
5. California
6. Colorado
7. Connecticut
8. Delaware
9. Florida
10.",
            "type": "text",
          },
        ],
        "modelId": "anthropic/claude-haiku-4-5",
        "name": null,
        "providerId": "anthropic",
        "providerModelName": "claude-haiku-4-5",
        "rawMessage": {
          "content": [
            {
              "text": "# U.S. States (50 total)

1. Alabama
2. Alaska
3. Arizona
4. Arkansas
5. California
6. Colorado
7. Connecticut
8. Delaware
9. Florida
10.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        "role": "assistant",
      },
    ],
    "modelId": "anthropic/claude-haiku-4-5",
    "nChunks": 12,
    "providerId": "anthropic",
    "providerModelName": "claude-haiku-4-5",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 15,
      "outputTokens": 51,
      "raw": "null",
      "reasoningTokens": 0,
      "totalTokens": 66,
    },
  },
}
`;

exports[`max tokens > [google] returns MAX_TOKENS finish reason for call 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "Here are all 50 U.S. states, in alphabetical order:

1.  ",
            "type": "text",
          },
        ],
        "modelId": "google/gemini-2.5-flash",
        "name": null,
        "providerId": "google",
        "providerModelName": "gemini-2.5-flash",
        "rawMessage": {
          "parts": [
            {
              "text": "Here are all 50 U.S. states, in alphabetical order:

1.  ",
            },
          ],
          "role": "model",
        },
        "role": "assistant",
      },
    ],
    "modelId": "google/gemini-2.5-flash",
    "providerId": "google",
    "providerModelName": "gemini-2.5-flash",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 9,
      "outputTokens": 45,
      "raw": "[object Object]",
      "reasoningTokens": 26,
      "totalTokens": 54,
    },
  },
}
`;

exports[`max tokens > [google] returns MAX_TOKENS finish reason for stream 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "Here are all 50 U.S. states:

1",
            "type": "text",
          },
        ],
        "modelId": "google/gemini-2.5-flash",
        "name": null,
        "providerId": "google",
        "providerModelName": "gemini-2.5-flash",
        "rawMessage": {
          "parts": [
            {
              "text": "Here are all 50 U.S. states:

1",
            },
          ],
          "role": "model",
        },
        "role": "assistant",
      },
    ],
    "modelId": "google/gemini-2.5-flash",
    "nChunks": 3,
    "providerId": "google",
    "providerModelName": "gemini-2.5-flash",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 9,
      "outputTokens": 46,
      "raw": "null",
      "reasoningTokens": 32,
      "totalTokens": 55,
    },
  },
}
`;

exports[`max tokens > [openai:completions] returns MAX_TOKENS finish reason for call 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [],
        "modelId": "openai/gpt-5-mini:completions",
        "name": null,
        "providerId": "openai",
        "providerModelName": "gpt-5-mini:completions",
        "rawMessage": {
          "annotations": [],
          "content": "",
          "role": "assistant",
        },
        "role": "assistant",
      },
    ],
    "modelId": "openai/gpt-5-mini:completions",
    "providerId": "openai",
    "providerModelName": "gpt-5-mini:completions",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 13,
      "outputTokens": 50,
      "raw": "[object Object]",
      "reasoningTokens": 50,
      "totalTokens": 63,
    },
  },
}
`;

exports[`max tokens > [openai:completions] returns MAX_TOKENS finish reason for stream 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "",
            "type": "text",
          },
        ],
        "modelId": "openai/gpt-5-mini:completions",
        "name": null,
        "providerId": "openai",
        "providerModelName": "gpt-5-mini:completions",
        "rawMessage": {
          "choices": [],
          "created": 1769818340,
          "id": "chatcmpl-D3st2G0vq1rJUKhXwOQWIUljjn7di",
          "model": "gpt-5-mini-2025-08-07",
          "obfuscation": "qbt2J",
          "object": "chat.completion.chunk",
          "service_tier": "default",
          "system_fingerprint": null,
          "usage": {
            "completion_tokens": 50,
            "completion_tokens_details": {
              "accepted_prediction_tokens": 0,
              "audio_tokens": 0,
              "reasoning_tokens": 50,
              "rejected_prediction_tokens": 0,
            },
            "prompt_tokens": 13,
            "prompt_tokens_details": {
              "audio_tokens": 0,
              "cached_tokens": 0,
            },
            "total_tokens": 63,
          },
        },
        "role": "assistant",
      },
    ],
    "modelId": "openai/gpt-5-mini:completions",
    "nChunks": 3,
    "providerId": "openai",
    "providerModelName": "gpt-5-mini:completions",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 13,
      "outputTokens": 50,
      "raw": "null",
      "reasoningTokens": 50,
      "totalTokens": 63,
    },
  },
}
`;

exports[`max tokens > [openai:responses] returns MAX_TOKENS finish reason for call 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [],
        "modelId": "openai/gpt-5-mini:responses",
        "name": null,
        "providerId": "openai",
        "providerModelName": "gpt-5-mini:responses",
        "rawMessage": [
          {
            "id": "rs_016fafd48a2b770b00697d48e1fb648195ae51f1ae6d5c8af9",
            "summary": [],
            "type": "reasoning",
          },
        ],
        "role": "assistant",
      },
    ],
    "modelId": "openai/gpt-5-mini:responses",
    "providerId": "openai",
    "providerModelName": "gpt-5-mini:responses",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 13,
      "outputTokens": 0,
      "raw": "[object Object]",
      "reasoningTokens": 0,
      "totalTokens": 13,
    },
  },
}
`;

exports[`max tokens > [openai:responses] returns MAX_TOKENS finish reason for stream 1`] = `
{
  "response": {
    "finishReason": "max_tokens",
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "List all U.S. states.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [],
        "modelId": "openai/gpt-5-mini:responses",
        "name": null,
        "providerId": "openai",
        "providerModelName": "gpt-5-mini:responses",
        "rawMessage": [
          {
            "id": "rs_0171ee5ab776926800697d48e66e50819ebf4dc85a4a5e6d05",
            "summary": [],
            "type": "reasoning",
          },
        ],
        "role": "assistant",
      },
    ],
    "modelId": "openai/gpt-5-mini:responses",
    "nChunks": 0,
    "providerId": "openai",
    "providerModelName": "gpt-5-mini:responses",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 13,
      "outputTokens": 0,
      "raw": "null",
      "reasoningTokens": 0,
      "totalTokens": 13,
    },
  },
}
`;
